--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,8 @@ presentation_date: 2014-03-29
 version: 2014.3.29.0
 licenses:
 - CC BY-SA 3.0
-slideshare_id: 
-speaker_deck_id: 
+slideshare_id: sapporoonga-20140329
+speaker_deck_id: droongafalsehazimekata
 ustream_id: 
 vimeo_id: 
 youtube_id: 
